--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,14 +1,92 @@
-
 <!DOCTYPE html>
 
 <html>
-<head>
-    <title></title>
-    <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
-    <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
-    <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
+<title>CSV, PNR files viewer</title>
+<link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
+<link rel="shortcut icon" type="image/png" href="@routes.Assets.at("javascripts/application.js")">
+<link rel='stylesheet' href='@routes.WebJarAssets.at(WebJarAssets.locate("css/bootstrap.min.css"))'>
+<script type='text/javascript' src='@routes.WebJarAssets.at(WebJarAssets.locate("jquery.min.js"))'></script>
+<script type='text/javascript' src='@routes.WebJarAssets.at(WebJarAssets.locate("bootstrap.min.js"))'></script>
+<script type='text/javascript' src='@routes.Assets.at("javascripts/bootstrap.file-input.js")'></script>
+<script type='text/javascript' src='@routes.Assets.at("javascripts/jquery.form.min.js")'></script>
+<script type="text/javascript" charset="utf-8">
+     $(function(){
+         // Makes upload button fancier
+         $('#file').bootstrapFileInput();
+         var updateProgress = function(progress) {
+            $('#bar').width(Math.round(($('.container').width()/100) * progress));
+            $('#bar').text(progress +'%');
+         }
+
+        var updateGrid = function(data){
+            $("#personsTable tr").remove();
+             $(data).each(function(){
+                $("#personsTable tbody").append(personToRaw(this))
+             })
+        }
+
+        var personToRaw = function(person){
+             return '<tr><td>' + person.name + '<td><td>'+ person.address +
+            '</td><td></td><td></td><td></td><td></td></tr>'
+        }
+
+        $('form').ajaxForm({
+            beforeSend: function() {
+                $('#status').show();
+                $('#bar').width(0);
+                $('#bar').text('0%');
+            },
+            uploadProgress: function(event, position, total, percentComplete) {
+                updateProgress(percentComplete);
+            },
+            success: function(xhr) {
+                $('#bar').width($('.container').width());
+                $('#bar').text('100%');
+            },
+            error: function(){
+                $('#status').hide();
+                console.log('error');
+            },
+            complete: function(xhr) {
+                if(xhr.status === 200){
+                    updateGrid(JSON.parse(xhr.responseText));
+                }
+            }
+        });
+
+        $('#file').change(function(){
+            $('form').submit();
+        })
+
+    })
+
+
+</script>
+
 </head>
 <body>
+<div class="container">
+    <h1>Csv and Pnr files viewer</h1>
+
+    <div class="progress progress-striped active" id="status">
+        <div class="bar" id="bar" style="width: 0%;"></div>
+    </div>
+    @helper.form(action = routes.Application.upload, 'enctype -> "multipart/form-data", 'id->"uploadForm") {
+        <input type="file" id="file" name="workbook" title="View Csv or Pnr">
+    }
+    <table class="table table-striped" id="personsTable">
+        <thead>
+        <th>Name</th>
+        <th>Address</th>
+        <th>Postcode</th>
+        <th>Phone</th>
+        <th>Credit Limit</th>
+        <th>Birthday</th>
+        </thead>
+        <tbody></tbody>
+    </table>
+
+</div>
 
 </body>
 </html>
