--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -9,25 +9,31 @@
 <script type='text/javascript' src='@routes.WebJarAssets.at(WebJarAssets.locate("bootstrap.min.js"))'></script>
 <script type='text/javascript' src='@routes.Assets.at("javascripts/bootstrap.file-input.js")'></script>
 <script type='text/javascript' src='@routes.Assets.at("javascripts/jquery.form.min.js")'></script>
+<script type='text/javascript' src='@routes.Assets.at("javascripts/date-format.js")'></script>
 <script type="text/javascript" charset="utf-8">
      $(function(){
          // Makes upload button fancier
          $('#file').bootstrapFileInput();
+         $('.alert').alert();
+         $('.alert').hide();
          var updateProgress = function(progress) {
             $('#bar').width(Math.round(($('.container').width()/100) * progress));
             $('#bar').text(progress +'%');
          }
 
         var updateGrid = function(data){
-            $("#personsTable tr").remove();
+            $('.alert').hide();
+            $('#status').show();
+            $("#personsTable tbody").empty();
              $(data).each(function(){
                 $("#personsTable tbody").append(personToRaw(this))
-             })
+             });
         }
 
         var personToRaw = function(person){
-             return '<tr><td>' + person.name + '<td><td>'+ person.address +
-            '</td><td></td><td></td><td></td><td></td></tr>'
+             return '<tr><td>' + person.name + '</td><td>'+ person.address +
+            '</td><td>'+ person.postcode +'</td><td>'+ person.phone +
+            '</td><td>'+ person.creditLimit +'</td><td>'+ new Date(person.birthday).toFormattedString('yyyy-MM-dd') + '</td></tr>'
         }
 
         $('form').ajaxForm({
@@ -43,8 +49,10 @@
                 $('#bar').width($('.container').width());
                 $('#bar').text('100%');
             },
-            error: function(){
+            error: function(xhr){
                 $('#status').hide();
+                $('.alert').show();
+                $('#error').text(xhr.responseText);
                 console.log('error');
             },
             complete: function(xhr) {
@@ -57,22 +65,29 @@
         $('#file').change(function(){
             $('form').submit();
         })
-
     })
-
-
 </script>
 
 </head>
 <body>
+<div class="navbar navbar-fixed-top">
+    <div class="navbar-inner">
+        <div class="container"/>
+    </div>
+</div>
 <div class="container">
-    <h1>Csv and Pnr files viewer</h1>
+    <h1>Csv and Prn Viewer</h1>
 
+
+    <div class="alert alert-error">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        <strong>Oops! </strong><span id="error"/>
+    </div>
     <div class="progress progress-striped active" id="status">
-        <div class="bar" id="bar" style="width: 0%;"></div>
+        <div class="bar" style="width: 0%;" id="bar"></div>
     </div>
     @helper.form(action = routes.Application.upload, 'enctype -> "multipart/form-data", 'id->"uploadForm") {
-        <input type="file" id="file" name="workbook" title="View Csv or Pnr">
+        <input type="file" id="file" name="workbook" title="Upload">
     }
     <table class="table table-striped" id="personsTable">
         <thead>
@@ -83,10 +98,8 @@
         <th>Credit Limit</th>
         <th>Birthday</th>
         </thead>
-        <tbody></tbody>
+        <tbody/>
     </table>
-
 </div>
-
 </body>
 </html>
