--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -3,70 +3,13 @@
 <html>
 <title>CSV, PNR files viewer</title>
 <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
-<link rel="shortcut icon" type="image/png" href="@routes.Assets.at("javascripts/application.js")">
 <link rel='stylesheet' href='@routes.WebJarAssets.at(WebJarAssets.locate("css/bootstrap.min.css"))'>
 <script type='text/javascript' src='@routes.WebJarAssets.at(WebJarAssets.locate("jquery.min.js"))'></script>
 <script type='text/javascript' src='@routes.WebJarAssets.at(WebJarAssets.locate("bootstrap.min.js"))'></script>
 <script type='text/javascript' src='@routes.Assets.at("javascripts/bootstrap.file-input.js")'></script>
 <script type='text/javascript' src='@routes.Assets.at("javascripts/jquery.form.min.js")'></script>
 <script type='text/javascript' src='@routes.Assets.at("javascripts/date-format.js")'></script>
-<script type="text/javascript" charset="utf-8">
-     $(function(){
-         // Makes upload button fancier
-         $('#file').bootstrapFileInput();
-         $('.alert').alert();
-         $('.alert').hide();
-         var updateProgress = function(progress) {
-            $('#bar').width(Math.round(($('.container').width()/100) * progress));
-            $('#bar').text(progress +'%');
-         }
-
-        var updateGrid = function(data){
-            $('.alert').hide();
-            $('#status').show();
-            $("#personsTable tbody").empty();
-             $(data).each(function(){
-                $("#personsTable tbody").append(personToRaw(this))
-             });
-        }
-
-        var personToRaw = function(person){
-             return '<tr><td>' + person.name + '</td><td>'+ person.address +
-            '</td><td>'+ person.postcode +'</td><td>'+ person.phone +
-            '</td><td>'+ person.creditLimit +'</td><td>'+ new Date(person.birthday).toFormattedString('yyyy-MM-dd') + '</td></tr>'
-        }
-
-        $('form').ajaxForm({
-            beforeSend: function() {
-                $('#status').show();
-                $('#bar').width(0);
-                $('#bar').text('0%');
-            },
-            uploadProgress: function(event, position, total, percentComplete) {
-                updateProgress(percentComplete);
-            },
-            success: function(xhr) {
-                $('#bar').width($('.container').width());
-                $('#bar').text('100%');
-            },
-            error: function(xhr){
-                $('#status').hide();
-                $('.alert').show();
-                $('#error').text(xhr.responseText);
-                console.log('error');
-            },
-            complete: function(xhr) {
-                if(xhr.status === 200){
-                    updateGrid(JSON.parse(xhr.responseText));
-                }
-            }
-        });
-
-        $('#file').change(function(){
-            $('form').submit();
-        })
-    })
-</script>
+<script type='text/javascript' src='@routes.Assets.at("javascripts/application.js")'></script>
 
 </head>
 <body>
